plugins {
    id 'base'
    id 'io.freefair.lombok' version "${lombok_version}" apply false
    id 'com.gradleup.shadow' version "${shadow_version}" apply false
    id 'net.fabricmc.fabric-loom' version "${fabric_loom_version}" apply false
    id 'net.neoforged.moddev' version "${moddevgradle_version}" apply false
    id 'multiloader-common' apply false
    id 'multiloader-loader' apply false
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version+"-"+rootProject.minecraft_version
}

subprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'io.freefair.lombok'
    repositories {
        maven { url = "https://maven.shedaniel.me/" }
        maven { url = "https://maven.terraformersmc.com/releases/" }
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 25
    }
}

tasks.register('mergeLoaderJars', Jar) {
    group = 'build'
    description = '將 Fabric 與 NeoForge 模組 jar 合併為單一 multiloader jar（共用類別重複時保留先加入者）。'

    def fabricJar = project(':fabric').tasks.named('jar', Jar)
    def neoforgeJar = project(':neoforge').tasks.named('jar', Jar)

    dependsOn project(':fabric').tasks.named('build')
    dependsOn project(':neoforge').tasks.named('build')

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    archiveFileName = "${rootProject.archives_name}-multiloader-${rootProject.version}.jar"
    destinationDirectory = layout.buildDirectory.dir('libs')

    from { zipTree(fabricJar.get().archiveFile) }
    from { zipTree(neoforgeJar.get().archiveFile) }
}

tasks.named('assemble') {
    dependsOn tasks.named('mergeLoaderJars')
}